[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "MOONLAPSE"
description = "MOONLAPSE branch of cognosis, namespace and filesystem interface; obsidian kb"
authors = [{ name = "MOONLAPSED", email = "MOONLAPSED@gmail.com" }]
version = "0.1.0"
requires-python = ">= 3.11"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.api.readme]
file = "src/api/static/README.md"
content-type = "text/markdown"

[tool.pdm.conda.pypi-mapping]
download-dir = "/tmp"
url = "https://url/to/mapping.yaml"

[build-system.backends.go]
name = "go"
requires = ["go>=1.16"]

[build-system.backends.npm]
name = "npm"
requires = ["npm>10.4.0"]

[project.scripts]
main = "main.py:main"

[tool.pdm.dependencies]
jax = "*"
jupyter = "*"
ipykernel = "*"
numpy = "*"
pandas = "*"
typing = "*"
xonsh = "*"
litellm = "*"
pydantic = "*"
pytest = "*"
httpx = "*"
docker = "*"
numba = "*"